--- a/sample_output/AutomationEnvironment.html
+++ b/sample_output/AutomationEnvironment.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+  <link rel="stylesheet" id="typekit-css" href="https://use.typekit.net/mju7kpw.css?ver=4.9.8" type="text/css" media="all">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/polar.css">
 </head>
@@ -15,40 +16,39 @@
   </div>
 
 </nav>
-
 <div class="container">
+  <div class="row">
+    <nav aria-label="breadcrumb">
+      <span class="breadcrumb-item"><a href='Automation.html'>Automation</a> - Environment</span>
+    </nav>
+  </div>
   <!-- Render the chart -->
   <div class="row overall">
-    <nav aria-label="breadcrumb">
-  <span class="breadcrumb-item"><a href='Automation.html'>Automation</a> - Environment</span>
-</nav>
-<div class='row'>
+    
+<div class="container">
+<div class='row chart_row'>
   <div class='col-lg-12'>
-    <div class="container">
-       <div class="row">
-        <div class='chart'>
-          <canvas id="myChartAutomationEnvironment" width="800" height="500"></canvas>
-        </div>
-        <div class='overlay'>
-          <canvas id="myOverlayAutomationEnvironment" width="800" height="500"></canvas>
-        </div>
-        <div class='legend'>
-          <canvas id="legendAutomationEnvironment" width="800" height="500"></canvas>
-        </div>
-        <div class='ticks'>
-          <canvas id="myTicksAutomationEnvironment" width="800" height="500"></canvas>
-        </div>
-      </div>
+    <div class='chart'>
+      <canvas id="myChartAutomationEnvironment" width="800" height="600"></canvas>
+    </div>
+    <div class='overlay'>
+      <canvas id="myOverlayAutomationEnvironment" width="800" height="600"></canvas>
+    </div>
+    <div class='legend'>
+      <canvas id="legendAutomationEnvironment" width="800" height="600"></canvas>
+    </div>
+    <div class='ticks'>
+      <canvas id="myTicksAutomationEnvironment" width="800" height="600"></canvas>
     </div>
   </div>
 </div>
-
+</div>
   </div>
 </div>
 <footer class="page-footer font-small pt-4">
 <!-- Copyright -->
-<div class="footer-copyright text-center py-3">© 2018 Copyright:
-  <a href="https://centricconsulting.com"> Centric Consulting</a>
+<div class="footer-copyright text-center py-3">
+  Prepared for Sample Client Inc. by Centric Consulting. <strong>* Client Confidential *</strong> © 2018 <a href="https://centricconsulting.com"> Centric Consulting</a>
 </div>
 <!-- Copyright -->
 
@@ -71,8 +71,7 @@
                 label: "Score",
                 data: [3,2,0],
                 backgroundColor: ["#59B9EF","#B5D855","#FBC363","#81D8FD","#DE94D4","#F5D048","#90B9D1","#CDC5A5","#50BBCC","#D7DD46","#92ADFE"],
-                borderColor: ["#000000", "#000000", "#000000", "#000000", "#000000",
-                    "#000000", "#000000", "#000000", "#000000"
+                borderColor: ["#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000"
                 ]
             }
         ],
@@ -103,7 +102,7 @@
         },
         tooltips: {
             callbacks: {
-                label: function(tooltipItem, data) {
+                label: function (tooltipItem, data) {
                     var label = data.labels[tooltipItem.index] || '';
                     return label + ": " + Math.round(data.true_values[tooltipItem.index]);
                 }
@@ -118,9 +117,7 @@
                 label: "Score",
                 data: [0,0,0],
                 backgroundColor: ["#59B9EF","#B5D855","#FBC363","#81D8FD","#DE94D4","#F5D048","#90B9D1","#CDC5A5","#50BBCC","#D7DD46","#92ADFE"],
-                borderColor: ["rgba(255,0,0,0.0)", "rgba(255,0,0,0.0)", "rgba(255,0,0,0.0)", "rgba(255,0,0,0.0)", "rgba(255,0,0,0.0)",
-                    "rgba(255,0,0,0.0)", "rgba(255,0,0,0.0)", "rgba(255,0,0,0.0)", "rgba(255,0,0,0.0)"
-                ]
+                borderColor: ["rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)"]
             }
         ],
         labels: ["Provisioning Self-service tear up/down [individual developer]","Provisioning Infrastructure as Code - Templated provisioning","Provisioning Containers and Orchestration"],
@@ -132,11 +129,15 @@
             display: false
         },
         legend: {
-            position: 'top'
+            position: 'top',
+            labels : {
+                fontSize: 14,
+                fontFamily: "'muli', 'Myriad Pro', Helvetica, Arial, sans-serif"
+            }
         },
         tooltips: {
             callbacks: {
-                label: function(tooltipItem, data) {
+                label: function (tooltipItem, data) {
                     var label = data.labels[tooltipItem.index] || '';
                     return label + ": " + Math.round(data.true_values[tooltipItem.index]);
                 }
@@ -155,29 +156,9 @@
             {
                 label: "Score",
                 data: [5,5,5],
-                backgroundColor: [
-                    "rgba(255,0,0,0.0)",
-                    "rgba(255,0,0,0.0)",
-                    "rgba(255,0,0,0.0)",
-                    "rgba(255,0,0,0.0)",
-                    "rgba(255,0,0,0.0)",
-                    "rgba(255,0,0,0.0)",
-                    "rgba(255,0,0,0.0)",
-                    "rgba(255,0,0,0.0)",
-                    "rgba(255,0,0,0.0)"
-                ],
+                backgroundColor: ["rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)"],
                 borderWidth: 3,
-                borderColor: [
-                    "#000000",
-                    "#000000",
-                    "#000000",
-                    "#000000",
-                    "#000000",
-                    "#000000",
-                    "#000000",
-                    "#000000",
-                    "#000000"
-                ]
+                borderColor: ["#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000"],
             }
         ],
         labels: ["Provisioning Self-service tear up/down [individual developer]","Provisioning Infrastructure as Code - Templated provisioning","Provisioning Containers and Orchestration"],
@@ -185,20 +166,20 @@
     };
     overlayOptionsAutomationEnvironment = {
         animation: false,
-    scale: {
+        scale: {
             display: false
         },
         legend: {
-          display: false
+            display: false
         },
         tooltips: {
             displayColors: false,
-          callbacks: {
-            label: function(tooltipItem, data) {
-              var label = data.labels[tooltipItem.index] || '';
-              return label + ": " + Math.round(data.true_values[tooltipItem.index] * 100)  / 100;
+            callbacks: {
+                label: function (tooltipItem, data) {
+                    var label = data.labels[tooltipItem.index] || '';
+                    return label + ": " + Math.round(data.true_values[tooltipItem.index] * 100) / 100;
+                }
             }
-          }
         }
     };
 
@@ -240,7 +221,7 @@
         },
         tooltips: {
             callbacks: {
-                label: function(tooltipItem, data) {
+                label: function (tooltipItem, data) {
                     var label = data.labels[tooltipItem.index] || '';
                     return label + ": " + Math.round(data.true_values[tooltipItem.index]);
                 }
