Move breadcrumbs to the navbar

--- a/sample_output/Overview.html
+++ b/sample_output/Overview.html
@@ -12,15 +12,16 @@
   </a>
 
   <div class="navbar-nav">
-   <span class="nav-item">Client scorecard demo</span>
+    <span class="nav-item">Client scorecard demo</span>
+  </div>
+    <div class="navbar-nav">
+    <span class="nav-item small-nav-item"></span>
   </div>
 
 </nav>
 <div class="container">
   <div class="row">
-    <nav aria-label="breadcrumb">
-      <span class="breadcrumb-item">Overview</span>
-    </nav>
+
   </div>
   <!-- Render the chart -->
   <div class="row overall">
