--- a/sample_output/AutomationSecurityAudit.html
+++ b/sample_output/AutomationSecurityAudit.html
@@ -12,15 +12,16 @@
   </a>
 
   <div class="navbar-nav">
-   <span class="nav-item">Client scorecard demo</span>
+    <span class="nav-item">Client scorecard demo</span>
+  </div>
+    <div class="navbar-nav">
+    <span class="nav-item small-nav-item"><a href='Overview.html'>Overview</a> - <a href='Automation.html'>Automation</a> - Security/Audit</span>
   </div>
 
 </nav>
 <div class="container">
   <div class="row">
-    <nav aria-label="breadcrumb">
-      <span class="breadcrumb-item"><a href='Automation.html'>Automation</a> - Security/Audit</span>
-    </nav>
+
   </div>
   <!-- Render the chart -->
   <div class="row overall">
